Sagonzal/request context (#10)
* Add requestContext object

* Refactoring. No need business logic added.

* More renaming and refactoring

* Add default scopes to OBO unit test

* PR feedback