@@ -23,14 +23,10 @@
 
 package com.microsoft.aad.msal4j;
 
-import java.io.IOException;
-import java.net.MalformedURLException;
-import java.net.URI;
-import java.net.URISyntaxException;
-import java.net.URL;
-import java.util.HashSet;
-
-import com.nimbusds.oauth2.sdk.*;
+import com.nimbusds.oauth2.sdk.ErrorObject;
+import com.nimbusds.oauth2.sdk.ParseException;
+import com.nimbusds.oauth2.sdk.SerializeException;
+import com.nimbusds.oauth2.sdk.TokenErrorResponse;
 import com.nimbusds.oauth2.sdk.auth.ClientAuthentication;
 import com.nimbusds.oauth2.sdk.auth.ClientSecretPost;
 import com.nimbusds.oauth2.sdk.auth.Secret;
@@ -45,26 +41,37 @@ import org.powermock.core.classloader.annotations.PrepareForTest;
 import org.testng.Assert;
 import org.testng.annotations.Test;
 
+import java.io.IOException;
+import java.net.MalformedURLException;
+import java.net.URI;
+import java.net.URISyntaxException;
+import java.net.URL;
+import java.util.Collections;
+
 @Test(groups = { "checkin" })
 @PrepareForTest(TokenErrorResponse.class)
-public class AdalTokenRequestTest extends AbstractAdalTests {
+public class TokenEndpointRequestTest extends AbstractMsalTests {
 
     @Test
-    public void executeOAuthRequest_SCBadRequestErrorInteractionRequired_AdalClaimsChallengeExceptionThrown()
+    public void executeOAuthRequest_SCBadRequestErrorInteractionRequired_ClaimsChallengeExceptionThrown()
             throws SerializeException,
             ParseException, AuthenticationException, IOException,
             java.text.ParseException, URISyntaxException {
 
-        AuthorizationGrant ag = new AuthorizationCodeGrant(
-                new AuthorizationCode("code"),
-                new URI("http://my.redirect.com"));
-        MsalOAuthAuthorizationGrant grant = new MsalOAuthAuthorizationGrant(ag, new HashSet<>());
+        final ClientAuthentication ca = new ClientSecretPost(
+                new ClientID("id"), new Secret("secret"));
+        final AuthorizationCodeRequest acr =  new AuthorizationCodeRequest(
+                Collections.singleton("default-scope"),
+                "code",
+                new URI("http://my.redirect.com"),
+                ca,
+                new RequestContext("id", "corr-id"));
 
-        AdalTokenRequest request = PowerMock.createPartialMock(
-                AdalTokenRequest.class, new String[]{"toOAuthRequest"},
-                new URL("http://login.windows.net"), null, grant, null, null, null);
-        AdalOAuthRequest adalOAuthHttpRequest = PowerMock
-                .createMock(AdalOAuthRequest.class);
+        TokenEndpointRequest request = PowerMock.createPartialMock(
+                TokenEndpointRequest.class, new String[]{"toOauthHttpRequest"},
+                new URL("http://login.windows.net"), acr, null);
+        OauthHttpRequest msalOauthHttpRequest = PowerMock
+                .createMock(OauthHttpRequest.class);
 
         HTTPResponse httpResponse = new HTTPResponse(HTTPResponse.SC_BAD_REQUEST);
 
@@ -80,15 +87,15 @@ public class AdalTokenRequestTest extends AbstractAdalTests {
         httpResponse.setContent(content);
         httpResponse.setContentType(CommonContentTypes.APPLICATION_JSON);
 
-        EasyMock.expect(request.toOAuthRequest()).andReturn(adalOAuthHttpRequest).times(1);
-        EasyMock.expect(adalOAuthHttpRequest.send()).andReturn(httpResponse).times(1);
+        EasyMock.expect(request.toOauthHttpRequest()).andReturn(msalOauthHttpRequest).times(1);
+        EasyMock.expect(msalOauthHttpRequest.send()).andReturn(httpResponse).times(1);
 
-        PowerMock.replay(request, adalOAuthHttpRequest);
+        PowerMock.replay(request, msalOauthHttpRequest);
 
         try {
-            request.executeOAuthRequestAndProcessResponse();
-            Assert.fail("Expected AdalClaimsChallengeException was not thrown");
-        } catch (AdalClaimsChallengeException ex) {
+            request.executeOauthRequestAndProcessResponse();
+            Assert.fail("Expected ClaimsChallengeException was not thrown");
+        } catch (ClaimsChallengeException ex) {
             Assert.assertEquals(claims.replace("\\", ""), ex.getClaims());
         }
         PowerMock.verifyAll();
@@ -100,15 +107,17 @@ public class AdalTokenRequestTest extends AbstractAdalTests {
             URISyntaxException {
         final ClientAuthentication ca = new ClientSecretPost(
                 new ClientID("id"), new Secret("secret"));
-        final AuthorizationGrant ag = new AuthorizationCodeGrant(
-                new AuthorizationCode("code"),
-                new URI("http://my.redirect.com"));
-        final MsalOAuthAuthorizationGrant grant = new MsalOAuthAuthorizationGrant(ag, new HashSet<>());
-        final ClientDataHttpHeaders cdhh = new ClientDataHttpHeaders("corr-id");
-        final AdalTokenRequest request = new AdalTokenRequest(null, ca, grant,
-                cdhh.getReadonlyHeaderMap(), null, null);
+        final AuthorizationCodeRequest acr =  new AuthorizationCodeRequest(
+                Collections.singleton("default-scope"),
+                "code",
+                new URI("http://my.redirect.com"),
+                ca,
+                new RequestContext("id", "corr-id"));
+
+        final ServiceBundle sb = new ServiceBundle(null, null, null);
+        final TokenEndpointRequest request = new TokenEndpointRequest(null, acr, sb);
         Assert.assertNotNull(request);
-        request.executeOAuthRequestAndProcessResponse();
+        request.executeOauthRequestAndProcessResponse();
     }
 
     @Test
@@ -116,15 +125,16 @@ public class AdalTokenRequestTest extends AbstractAdalTests {
             URISyntaxException {
         final ClientAuthentication ca = new ClientSecretPost(
                 new ClientID("id"), new Secret("secret"));
-        final AuthorizationGrant ag = new AuthorizationCodeGrant(
-                new AuthorizationCode("code"),
-                new URI("http://my.redirect.com"));
-        final MsalOAuthAuthorizationGrant grant = new MsalOAuthAuthorizationGrant(ag,
-                new HashSet<>());
-        final ClientDataHttpHeaders cdhh = new ClientDataHttpHeaders("corr-id");
-        final AdalTokenRequest request = new AdalTokenRequest(new URL(
-                "http://login.windows.net"), ca, grant,
-                cdhh.getReadonlyHeaderMap(), null, null);
+        final AuthorizationCodeRequest acr =  new AuthorizationCodeRequest(
+                Collections.singleton("default-scope"),
+                "code",
+                new URI("http://my.redirect.com"),
+                ca,
+                new RequestContext("id", "corr-id"));
+        final TokenEndpointRequest request = new TokenEndpointRequest(
+                new URL("http://login.windows.net"),
+                acr,
+                new ServiceBundle(null, null, null));
         Assert.assertNotNull(request);
     }
 
@@ -134,21 +144,22 @@ public class AdalTokenRequestTest extends AbstractAdalTests {
             URISyntaxException {
         final ClientAuthentication ca = new ClientSecretPost(
                 new ClientID("id"), new Secret("secret"));
-        final AuthorizationGrant ag = new AuthorizationCodeGrant(
-                new AuthorizationCode("code"),
-                new URI("http://my.redirect.com"));
-        final MsalOAuthAuthorizationGrant grant = new MsalOAuthAuthorizationGrant(ag,
-                new HashSet<>());
-        final ClientDataHttpHeaders cdhh = new ClientDataHttpHeaders("corr-id");
-        final AdalTokenRequest request = new AdalTokenRequest(new URL(
-                "http://login.windows.net"), ca, grant,
-                cdhh.getReadonlyHeaderMap(), null, null);
+        final AuthorizationCodeRequest acr =  new AuthorizationCodeRequest(
+                Collections.singleton("default-scope"),
+                "code",
+                new URI("http://my.redirect.com"),
+                ca,
+                new RequestContext("id", "corr-id"));
+        final TokenEndpointRequest request = new TokenEndpointRequest(
+                new URL("http://login.windows.net"),
+                acr,
+                new ServiceBundle(null, null, null));
         Assert.assertNotNull(request);
-        final AdalOAuthRequest req = request.toOAuthRequest();
+        final OauthHttpRequest req = request.toOauthHttpRequest();
         Assert.assertNotNull(req);
         Assert.assertEquals(
                 "corr-id",
-                cdhh.getReadonlyHeaderMap().get(
+                req.getReadOnlyExtraHeaderParameters().get(
                         ClientDataHttpHeaders.CORRELATION_ID_HEADER_NAME));
     }
 
@@ -156,14 +167,20 @@ public class AdalTokenRequestTest extends AbstractAdalTests {
     public void testToOAuthRequestNullCorrelationId_NullClientAuth()
             throws MalformedURLException, SerializeException,
             URISyntaxException {
-        final AuthorizationGrant ag = new AuthorizationCodeGrant(
-                new AuthorizationCode("code"),
-                new URI("http://my.redirect.com"));
-        final MsalOAuthAuthorizationGrant grant = new MsalOAuthAuthorizationGrant(ag, new HashSet<>());
-        final AdalTokenRequest request = new AdalTokenRequest(new URL(
-                "http://login.windows.net"), null, grant, null, null, null);
+        final ClientAuthentication ca = new ClientSecretPost(
+                new ClientID("id"), new Secret("secret"));
+        final AuthorizationCodeRequest acr =  new AuthorizationCodeRequest(
+                Collections.singleton("default-scope"),
+                "code",
+                new URI("http://my.redirect.com"),
+                ca,
+                new RequestContext("id", "corr-id"));
+        final TokenEndpointRequest request = new TokenEndpointRequest(
+                new URL("http://login.windows.net"),
+                acr,
+                new ServiceBundle(null, null, null));
         Assert.assertNotNull(request);
-        final AdalOAuthRequest req = request.toOAuthRequest();
+        final OauthHttpRequest req = request.toOauthHttpRequest();
         Assert.assertNotNull(req);
     }
 
@@ -171,21 +188,25 @@ public class AdalTokenRequestTest extends AbstractAdalTests {
     public void testExecuteOAuth_Success() throws SerializeException,
             ParseException, AuthenticationException, IOException,
             java.text.ParseException, URISyntaxException {
-        final AuthorizationGrant ag = new AuthorizationCodeGrant(
-                new AuthorizationCode("code"),
-                new URI("http://my.redirect.com"));
-        final MsalOAuthAuthorizationGrant grant = new MsalOAuthAuthorizationGrant(ag, new HashSet<>());
+        final ClientAuthentication ca = new ClientSecretPost(
+                new ClientID("id"), new Secret("secret"));
+        final AuthorizationCodeRequest acr =  new AuthorizationCodeRequest(
+                Collections.singleton("default-scope"),
+                "code",
+                new URI("http://my.redirect.com"),
+                ca,
+                new RequestContext("id", "corr-id"));
 
-        final AdalTokenRequest request = PowerMock.createPartialMock(
-                AdalTokenRequest.class, new String[] { "toOAuthRequest" },
-                new URL("http://login.windows.net"), null, grant, null, null, null);
-        final AdalOAuthRequest adalOAuthHttpRequest = PowerMock
-                .createMock(AdalOAuthRequest.class);
+        final TokenEndpointRequest request = PowerMock.createPartialMock(
+                TokenEndpointRequest.class, new String[] { "toOauthHttpRequest" },
+                new URL("http://login.windows.net"), acr, null);
+        final OauthHttpRequest msalOauthHttpRequest = PowerMock
+                .createMock(OauthHttpRequest.class);
         final HTTPResponse httpResponse = PowerMock
                 .createMock(HTTPResponse.class);
-        EasyMock.expect(request.toOAuthRequest())
-                .andReturn(adalOAuthHttpRequest).times(1);
-        EasyMock.expect(adalOAuthHttpRequest.send()).andReturn(httpResponse)
+        EasyMock.expect(request.toOauthHttpRequest())
+                .andReturn(msalOauthHttpRequest).times(1);
+        EasyMock.expect(msalOauthHttpRequest.send()).andReturn(httpResponse)
                 .times(1);
         EasyMock.expect(httpResponse.getStatusCode()).andReturn(200).times(1);
         EasyMock.expect(httpResponse.getContentAsJSONObject())
@@ -196,10 +217,10 @@ public class AdalTokenRequestTest extends AbstractAdalTests {
         httpResponse.ensureStatusCode(200);
         EasyMock.expectLastCall();
 
-        PowerMock.replay(request, adalOAuthHttpRequest, httpResponse);
+        PowerMock.replay(request, msalOauthHttpRequest, httpResponse);
 
         final AuthenticationResult result = request
-                .executeOAuthRequestAndProcessResponse();
+                .executeOauthRequestAndProcessResponse();
         PowerMock.verifyAll();
         Assert.assertNotNull(result);
         Assert.assertNotNull(result.getUserInfo());
@@ -219,21 +240,25 @@ public class AdalTokenRequestTest extends AbstractAdalTests {
     public void testExecuteOAuth_Failure() throws SerializeException,
             ParseException, AuthenticationException, IOException,
             java.text.ParseException, URISyntaxException {
-        final AuthorizationGrant ag = new AuthorizationCodeGrant(
-                new AuthorizationCode("code"),
-                new URI("http://my.redirect.com"));
-        final MsalOAuthAuthorizationGrant grant = new MsalOAuthAuthorizationGrant(ag, new HashSet<>());
+        final ClientAuthentication ca = new ClientSecretPost(
+                new ClientID("id"), new Secret("secret"));
+        final AuthorizationCodeRequest acr =  new AuthorizationCodeRequest(
+                Collections.singleton("default-scope"),
+                "code",
+                new URI("http://my.redirect.com"),
+                ca,
+                new RequestContext("id", "corr-id"));
 
-        final AdalTokenRequest request = PowerMock.createPartialMock(
-                AdalTokenRequest.class, new String[] { "toOAuthRequest" },
-                new URL("http://login.windows.net"), null, grant, null, null, null);
-        final AdalOAuthRequest adalOAuthHttpRequest = PowerMock
-                .createMock(AdalOAuthRequest.class);
+        final TokenEndpointRequest request = PowerMock.createPartialMock(
+                TokenEndpointRequest.class, new String[] { "toOauthHttpRequest" },
+                new URL("http://login.windows.net"), acr, null);
+        final OauthHttpRequest msalOauthHttpRequest = PowerMock
+                .createMock(OauthHttpRequest.class);
         final HTTPResponse httpResponse = PowerMock
                 .createMock(HTTPResponse.class);
-        EasyMock.expect(request.toOAuthRequest())
-                .andReturn(adalOAuthHttpRequest).times(1);
-        EasyMock.expect(adalOAuthHttpRequest.send()).andReturn(httpResponse)
+        EasyMock.expect(request.toOauthHttpRequest())
+                .andReturn(msalOauthHttpRequest).times(1);
+        EasyMock.expect(msalOauthHttpRequest.send()).andReturn(httpResponse)
                 .times(1);
         EasyMock.expect(httpResponse.getStatusCode()).andReturn(402).times(1);
 
@@ -261,14 +286,14 @@ public class AdalTokenRequestTest extends AbstractAdalTests {
         EasyMock.expect(errorResponse.toJSONObject()).andReturn(jsonObj)
                 .times(1);
 
-        PowerMock.replay(request, adalOAuthHttpRequest, httpResponse,
+        PowerMock.replay(request, msalOauthHttpRequest, httpResponse,
                 TokenErrorResponse.class, errorObject, jsonObj, errorResponse);
         try {
-            request.executeOAuthRequestAndProcessResponse();
+            request.executeOauthRequestAndProcessResponse();
             PowerMock.verifyAll();
         }
         finally {
-            PowerMock.reset(request, adalOAuthHttpRequest, httpResponse,
+            PowerMock.reset(request, msalOauthHttpRequest, httpResponse,
                     TokenErrorResponse.class, jsonObj, errorResponse);
         }
     }
